--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>resumesvec</title>
 <link rel="stylesheet" href="index.css">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 <body>
   <div class="flex-parent">
@@ -20,5 +21,6 @@
 
     </div>
   </div>
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
